# terminalbreaker

./: README.md  a.bat  build_and_publish.bat  index.html  notes.txt  pyproject.toml  setup.py  win10colors.bat
docs/: README.md  api.html  index.html  index.md
src/tbpy/: __init__.py  test.py
src/tbpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/terminalbreaker/: __init__.py  terminalbreaker.py  test.py
src/terminalbreaker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/terminalbreaker_pkg.egg-info/: PKG-INFO  SOURCES.txt
src/terminalbreaker_py.egg-info/: PKG-INFO  SOURCES.txt
tests/: terminalbreaker-cover.py  test.py
