[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "terminalbreaker"
version = "0.1.0"
authors = [
  { name="Ellicode", email="hello@ellicode.com" },
]
description = "BREAK THE TERMINAL! Create panels, forms, dialogs and buttons into your Python CLI app! "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Ellicode/terminalbreaker/blob/main/README.md"
"Bug Tracker" = "https://github.com/Ellicode/terminalbreaker/issues"